# openCV_course

./: CMakeLists.txt  README.md
src/: chapter1.cpp  chapter2.cpp  chapter3.cpp  chapter4.cpp  chapter6.cpp  chapter7.cpp  chapter8.cpp
